[package]
edition = '2018'
name = "intro_chapter_adder"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/intro_chapter_adder"
readme = "README.md"
description = "adds chapters to tv episodes"
documentation = "https://docs.rs/intro_chapter_adder"

[badges]
travis-ci = { repository = "antifuchs/intro_chapter_adder", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
ffmpeg4 = "0.4.0"
anyhow = "*"
csv = "1.1.3"
serde_derive = "*"
serde = "*"
mktemp = "0.4.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
indicatif = "0.14.0"
humantime = "2.0.0"